--- a/templates/category/delete-confirmation.html.twig
+++ b/templates/category/delete-confirmation.html.twig
@@ -8,6 +8,9 @@
     <div class="px-3 md:px-14 py-20 gap-10 flex flex-col items-center">
         {% include 'components/message/inform.html.twig' with { message: 'Are you sure, you want to delete the category "' ~ category.getTitle() ~ '" ? The notes included in the category will be detroyed !' } %}
 
-        {% include 'components/button.html.twig' with { actionPath: path('app_category_one_delete', { categoryId: category.getId() }), buttonText: 'Delete the category', highlight: true } %}
+        <div class="gap-4 flex items-center">
+            {% include 'components/button.html.twig' with { actionPath: path('app_profile'), buttonText: 'Cancel' } %}
+            {% include 'components/button.html.twig' with { actionPath: path('app_category_one_delete', { categoryId: category.getId() }), buttonText: 'Delete the category', highlight: true } %}
+        </div>
     </div>
 {% endblock %}
