--- a/templates/components/note/text/likes-count.html.twig
+++ b/templates/components/note/text/likes-count.html.twig
@@ -1,4 +1,4 @@
-{% if isInCollection is defined and isInCollection %}
+{% if useSqueezeEffect is defined and useSqueezeEffect %}
     <p class="w-fit font-medium text-teal-900 hover:scale-y-[1.15] transform transition-transform">
         {{ likesCount }} likes
     </p>
