--- a/templates/components/note/text/title.html.twig
+++ b/templates/components/note/text/title.html.twig
@@ -1,4 +1,4 @@
-{% if isInCollection is defined and isInCollection %}
+{% if useSqueezeEffect is defined and useSqueezeEffect %}
     <p class="text-3xl font-medium truncate">
         {{ note.getTitle() }}
     </p>
