--- a/templates/components/note/tag/list.html.twig
+++ b/templates/components/note/tag/list.html.twig
@@ -1,14 +1,14 @@
 <ul class="gap-x-3 flex flex-wrap text-teal-900 font-medium">
-    {% if isInCollection is defined and isInCollection %}
+    {% if useSqueezeEffect is defined and useSqueezeEffect %}
         {% for tag in tags %}
             <li class="hover:scale-y-[1.15] transform transition-transform">
-                {{ tag.name }}
+                #{{ tag.name }}
             </li>
         {% endfor %}
     {% else %}
         {% for tag in tags %}
             <li>
-                {{ tag.name }}
+                #{{ tag.name }}
             </li>
         {% endfor %}
     {% endif %}
